[gd_scene load_steps=25 format=3 uid="uid://b7riegut3a8nm"]

[ext_resource type="Sky" uid="uid://tm16h4yqewq4" path="res://stargazing/skybox/variant2/starry_skybox_treesless.tres" id="1_36b8n"]
[ext_resource type="Script" path="res://stargazing/stargazing.gd" id="1_fapj7"]
[ext_resource type="Script" path="res://stargazing/scripts/stargazing_dialogue_manager.gd" id="1_h8loa"]
[ext_resource type="Script" path="res://stargazing/scripts/stargazer_perspective.gd" id="2_dcg3g"]
[ext_resource type="Texture2D" uid="uid://by5yyycldn78p" path="res://stargazing/sprites/circle_crosshair.png" id="3_7ybks"]
[ext_resource type="Texture2D" uid="uid://oo6chm0walfo" path="res://stargazing/sprites/finger_pointing.png" id="3_g5msl"]
[ext_resource type="Script" path="res://stargazing/scripts/crosshair.gd" id="4_2faaw"]
[ext_resource type="Script" path="res://stargazing/scripts/stargazing_tutorial.gd" id="4_sa6gw"]
[ext_resource type="Script" path="res://stargazing/scripts/star_picker_logic.gd" id="7_tyand"]
[ext_resource type="Script" path="res://stargazing/scripts/star_highlighter.gd" id="10_3w00e"]
[ext_resource type="Script" path="res://stargazing/scripts/starcharter.gd" id="10_ku6pm"]
[ext_resource type="Script" path="res://stargazing/scripts/stargazing_ui.gd" id="10_os6q2"]
[ext_resource type="PackedScene" uid="uid://t6eeaf2vdo43" path="res://objectives/ObjectivesManager.tscn" id="11_3p1yb"]
[ext_resource type="PackedScene" uid="uid://dgic8434pc3fq" path="res://stargazing/sub_scenes/starchart.tscn" id="11_7t2kk"]
[ext_resource type="Script" path="res://stargazing/scripts/tree_spawner.gd" id="11_r2x1k"]
[ext_resource type="Script" path="res://objectives/objective.gd" id="12_apwpf"]
[ext_resource type="PackedScene" uid="uid://davqj3l78lli2" path="res://journal/journal.tscn" id="15_i5mt1"]
[ext_resource type="Script" path="res://stargazing/scripts/stargazing_objectives_manager.gd" id="18_6jitd"]
[ext_resource type="AudioStream" uid="uid://rgs3i6hbeuhu" path="res://audio/night-ambience-17064.mp3" id="19_p4mbq"]

[sub_resource type="Resource" id="Resource_3mwb8"]
script = ExtResource("12_apwpf")
tasks = Array[String](["Open the Journal (press J)", "Find all Cassiopeia stars", "Find all Little Dipper stars", "Find all Big Dipper stars", "Find the North Star"])
sequential = true

[sub_resource type="Environment" id="Environment_dx87f"]
background_mode = 2
sky = ExtResource("1_36b8n")

[sub_resource type="Curve3D" id="Curve3D_76yy0"]

[sub_resource type="Curve3D" id="Curve3D_f485u"]

[sub_resource type="Curve3D" id="Curve3D_ssevu"]

[node name="Stargazing" type="Node"]
script = ExtResource("1_fapj7")

[node name="StargazingDialogueManager" type="Node" parent="."]
script = ExtResource("1_h8loa")

[node name="StargazingTutorial" type="Node" parent="."]
script = ExtResource("4_sa6gw")

[node name="StarPickerLogic" type="Node" parent="."]
script = ExtResource("7_tyand")
precision_required = 0.035

[node name="StargazingObjectivesManager" type="Node" parent="."]
script = ExtResource("18_6jitd")

[node name="ObjectivesManager" parent="StargazingObjectivesManager" instance=ExtResource("11_3p1yb")]
objective = SubResource("Resource_3mwb8")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_dx87f")

[node name="StargazerPerspective" type="Camera3D" parent="."]
current = true
size = 1.75
script = ExtResource("2_dcg3g")
starting_vertical_angle = -0.393
min_vertical_angle = -0.393
instability = 0.2

[node name="TreeSpawner" type="Node3D" parent="."]
script = ExtResource("11_r2x1k")

[node name="StarHighlighter" type="Node3D" parent="."]
script = ExtResource("10_3w00e")

[node name="Starcharter" type="Node3D" parent="."]
script = ExtResource("10_ku6pm")

[node name="CassiopeiaStarchart" parent="Starcharter" instance=ExtResource("11_7t2kk")]
curve = SubResource("Curve3D_76yy0")

[node name="LittleDipperStarchart" parent="Starcharter" instance=ExtResource("11_7t2kk")]
curve = SubResource("Curve3D_f485u")

[node name="BigDipperStarchart" parent="Starcharter" instance=ExtResource("11_7t2kk")]
curve = SubResource("Curve3D_ssevu")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1.0
offset_top = 7.0
offset_right = 1.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_os6q2")

[node name="Crosshair" type="Sprite2D" parent="UI"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_7ybks")
script = ExtResource("4_2faaw")

[node name="FingerPointing" type="Sprite2D" parent="UI"]
position = Vector2(-536, 375)
rotation = 0.122173
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_g5msl")

[node name="Book" parent="." instance=ExtResource("15_i5mt1")]
visible = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("19_p4mbq")
autoplay = true

[connection signal="explanation_dialogue_ended" from="StargazingDialogueManager" to="StargazingObjectivesManager" method="_on_stargazing_dialogue_manager_explanation_dialogue_ended"]
[connection signal="explanation_dialogue_ended" from="StargazingDialogueManager" to="UI" method="_on_stargazing_dialogue_manager_explanation_dialogue_ended"]
[connection signal="intro_dialogue_ended" from="StargazingDialogueManager" to="StargazerPerspective" method="_on_stargazing_dialogue_manager_intro_dialogue_ended"]
[connection signal="intro_dialogue_ended" from="StargazingDialogueManager" to="UI" method="_on_stargazing_dialogue_manager_intro_dialogue_ended"]
[connection signal="all_solved" from="StargazingTutorial" to="." method="_on_stargazing_tutorial_all_solved"]
[connection signal="load_star_group" from="StargazingTutorial" to="StargazingDialogueManager" method="_on_stargazing_tutorial_load_star_group"]
[connection signal="load_star_group" from="StargazingTutorial" to="StarPickerLogic" method="_on_stargazing_tutorial_load_star_group"]
[connection signal="load_star_group" from="StargazingTutorial" to="StargazingObjectivesManager" method="_on_stargazing_tutorial_load_star_group"]
[connection signal="load_star_group" from="StargazingTutorial" to="Starcharter" method="_on_stargazing_tutorial_load_star_group"]
[connection signal="calibrated" from="StarPickerLogic" to="UI/Crosshair" method="_on_star_picker_logic_calibrated"]
[connection signal="solved_star" from="StarPickerLogic" to="StargazingTutorial" method="_on_star_picker_logic_solved_star"]
[connection signal="solved_star" from="StarPickerLogic" to="StarHighlighter" method="_on_star_picker_logic_solved_star"]
[connection signal="cinematic_movement_ended" from="StargazerPerspective" to="StargazingDialogueManager" method="_on_stargazer_perspective_cinematic_movement_ended"]
[connection signal="rotated" from="StargazerPerspective" to="StarPickerLogic" method="_on_stargazer_perspective_rotated"]
[connection signal="opened" from="Book" to="StargazingObjectivesManager" method="_on_book_opened"]
